# spanner-bazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  deps.bzl  go.mod  go.sum  main.go
